syntax = "proto3";

package project;

message Project {
  string id = 1;
  string name = 2;
  string description = 3;
}

message GetProjectRequest {
  string project_id = 1;
}

message GetProjectResponse {
  Project project = 1;
}

message SearchProjectsRequest {
  string query = 1;
}

message SearchProjectsResponse {
  repeated Project projects = 1;
}

service ProjectService {
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse);
  rpc SearchProjects(SearchProjectsRequest) returns (SearchProjectsResponse);
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
}

message CreateProjectResponse {
  Project project = 1;
}

message UpdateProjectRequest {
  string project_id = 1;
  string name = 2;
  string description = 3;
}

message UpdateProjectResponse {
  Project project = 1;
}

message DeleteProjectRequest {
  string project_id = 1;
}

message DeleteProjectResponse {
  bool success = 1;
}
